# ros_test-

./: .gitignore  .gitmodules  README.md  ros_build.sh  ros_init.sh  ros_run.sh
.devcontainer/: Dockerfile  devcontainer.json
src/DOBOT_6Axis_ROS2_V3/cr10_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/cr12_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/cr16_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/cr3_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/cr5_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/cr7_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/cra_description/urdf/: nova5_robot.xacro
src/DOBOT_6Axis_ROS2_V3/dobot_bringup_v3/dobot_bringup_v3/: dobot_api.py
src/DOBOT_6Axis_ROS2_V3/dobot_bringup_v4/: CMakeLists.txt  package.xml
src/DOBOT_6Axis_ROS2_V3/dobot_bringup_v4/config/: param.json
src/DOBOT_6Axis_ROS2_V3/dobot_bringup_v4/launch/: dobot_bringup_ros2.launch.py
src/DOBOT_6Axis_ROS2_V3/dobot_bringup_v4/src/: command.cpp  cr_robot_ros2.cpp  follow_path.cpp  main.cpp  parseTool.cpp  tcp_socket.cpp
src/DOBOT_6Axis_ROS2_V3/dobot_gazebo/: package.xml
src/DOBOT_6Axis_ROS2_V3/dobot_msgs_v3/srv/: DI.srv  DOGroup.srv  DigitalOutputs.srv  GetAngle.srv  GetCoils.srv  GetErrorID.srv  GetInRegs.srv  GetPose.srv  InverseSolution.srv  LoadSwitch.srv  ModbusCreate.srv  MovJExt.srv  RelJointMovJ.srv  RelMovJTool.srv  RelMovJUser.srv  RelMovLUser.srv  SetCoils.srv
src/DOBOT_6Axis_ROS2_V3/dobot_msgs_v4/srv/: ServoJ.srv
src/DOBOT_6Axis_ROS2_V3/dobot_rviz/launch/: nova2_with_gripper.launch.py
src/DOBOT_6Axis_ROS2_V3/dobot_rviz/rviz/: gripper.rviz
src/DOBOT_6Axis_ROS2_V3/dobot_rviz/urdf/: nova2_with_pgc-50-35.xacro
src/DOBOT_6Axis_ROS2_V3/gripper_pgc_description/: CMakeLists.txt  package.xml
src/DOBOT_6Axis_ROS2_V3/gripper_pgc_description/launch/: robot_description.launch.py  rviz.launch.py
src/DOBOT_6Axis_ROS2_V3/gripper_pgc_description/meshes/: base_link.stl  left_1.stl  right_1.stl  (+1 more)
src/DOBOT_6Axis_ROS2_V3/nova2_moveit/: package.xml
src/DOBOT_6Axis_ROS2_V3/nova2_with_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/DOBOT_6Axis_ROS2_V3/nova5_moveit/: package.xml
src/aiva_executor/: CMakeLists.txt  package.xml
src/aiva_executor/config/: config.yaml
src/aiva_executor/launch/: launch.py  pnp-env.launch.py  pnp.launch.py
src/aiva_executor/src/: aiva_executor.cpp  pick_place_demo.cpp  pick_place_task.cpp
src/aiva_ros_bridge/: package.xml  setup.cfg  setup.py
src/aiva_ros_bridge/aiva_ros_bridge/: aiva_ros_bridge.py  aiva_ros_bridge_node.py  aiva_ros_bridge_options.py  appsettings.json  config.py  external_robots_client.py  external_robots_handler.py  robot_definition.py
src/aiva_ros_bridge/launch/: launch.py
src/aiva_ros_bridge/proto/: aiva_ros_bridge.proto  aiva_ros_bridge_pb2.py  aiva_ros_bridge_pb2.pyi  aiva_ros_bridge_pb2_grpc.py
(+33 files in other folders)
